revert toList() to collect(Collectors.toList())