@@ -2,6 +2,7 @@ package io.openems.common.jsonrpc.response;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
@@ -54,7 +55,7 @@ public class AppCenterGetPossibleAppsResponse extends JsonrpcResponseSuccess {
 				JsonUtils.stream(bundles) //
 						.map(i -> i.getAsJsonArray()) //
 						.map(Bundle::from) //
-						.toList() //
+						.collect(Collectors.toList()) //
 		);
 	}
 
@@ -114,7 +115,7 @@ public class AppCenterGetPossibleAppsResponse extends JsonrpcResponseSuccess {
 			return new Bundle(JsonUtils.stream(jsonArray) //
 					.map(t -> t.getAsJsonObject()) //
 					.map(App::from) //
-					.toList() //
+					.collect(Collectors.toList()) //
 			);
 		}
 
