@@ -2,6 +2,7 @@ package io.openems.common.jsonrpc.response;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
@@ -94,15 +95,15 @@ public class AppCenterIsKeyApplicableResponse extends JsonrpcResponseSuccess {
 					JsonUtils.stream(JsonUtils.getAsJsonArray(jsonObject, "bundles")) //
 							.map(JsonElement::getAsJsonArray) //
 							.map(Bundle::from) //
-							.toList(), //
+							.collect(Collectors.toList()), //
 					JsonUtils.stream(JsonUtils.getAsJsonArray(jsonObject, "registrations")) //
 							.map(JsonElement::getAsJsonObject) //
 							.map(Registration::from) //
-							.toList(), //
+							.collect(Collectors.toList()), //
 					JsonUtils.stream(JsonUtils.getAsJsonArray(jsonObject, "usages")) //
 							.map(JsonElement::getAsJsonObject) //
 							.map(Usage::from) //
-							.toList() //
+							.collect(Collectors.toList()) //
 			);
 		}
 
